--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <script src="https://kit.fontawesome.com/887a835504.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header><img src="" alt="Logo"></header>
+  <header>
+    <h1>Aquí va un logo</h1>
+    <form action="https://www.google.com/search" method="get">
+      <fieldset>
+          <legend>Busqueda</legend>
+              <!-- Input Busqueda-->
+              <label for="busqueda">Buscar en google:</label>
+              <input type="search" name="q" id="busqueda">
+              <input type="submit" value="Enviar">
+      </fieldset>
+    </form>
+  </header>
     <nav>
     <div class="nav">
         <input type="checkbox">
