--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 </head>
 <body>
   <header>
+    <div class="logo">
     <h1>Aquí va un logo</h1>
+    </div>
     <form action="https://www.google.com/search" method="get">
       <fieldset>
           <legend>Busqueda</legend>
               <!-- Input Busqueda-->
               <label for="busqueda">Buscar en google:</label>
+              <br>
               <input type="search" name="q" id="busqueda">
+              <br>
               <input type="submit" value="Enviar">
       </fieldset>
     </form>
