--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
           <span></span>
           <span></span>
           <div class="menu">
-            <li><a href="#">home</a></li>
-            <li><a href="#">about me</a></li>
-            <li><a href="#">my job</a></li>
-            <li><a href="#">contact</a></li>
+            <li><a href="#">inicio</a></li>
+            <li><a href="#">sobre mí</a></li>
+            <li><a href="#">mi trabajo</a></li>
+            <li><a href="#">contacto</a></li>
           </div>
     </div>
     </nav>
+    <section class="pregunta">
+      <h1>¿Cansado de que tu casa siempre luce igual?</h1>
+    </section>
     
     <!-- Carrusel de imagenes -->
     <div class="carrousel">
