--- a/index.html
+++ b/index.html
@@ -39,22 +39,25 @@
     </section>
 
     <section id="iconos">
-        <div id="contenido-inconos">
+        <div class="contenido-iconos">
             <div>
-                <img src="" alt="">
+                <img src="./img/baldosas.jpg" alt="baldosas">
                 <h6>Instalación de baldosas</h6>
-                <p>¿Cansado de ver el mismo estilo antiguo de siempre en tu casa? Yo soy Wilson el enchapador y puedo ayudarte</p>
+                <p>Esta es mi pasión. Transformar espacios aburridos en lugares modernos y con estilo.</p>
             </div>
             <div>
-                <img src="" alt="">
-                <h6>Instalación de sanitarios</h6>
-                <p>¿Deseas modernizar tu red de sanitarios? contáctame soy el indicado para ese trabajo</p>
+                <img src="./img/sanitario.jpg" alt="sanitario">
+                <h6>Arregla tu baño</h6>
+                <p>¿Deseas modernizar tu baño? contáctame soy el indicado para ese trabajo</p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="./img/plomeria.jpg" alt="">
                 <h6>Plomería</h6>
                 <p>Todo lo relacionado con tubería, en la cocina, en el baño, o cualquier tipo de goteras</p>
             </div>
+        </div>
+        <div class="boton-iconos">
+            <a href="#" class="boton-saber-mas">Saber más</a>
         </div>
     </section>
 </body>
