--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <h6>Arregla tu baño</h6>
                 <p>¿Deseas modernizar tu baño? contáctame soy el indicado para ese trabajo</p>
             </div>
-            <div>
+            <div id="plomeria">
                 <img src="./img/plomeria.jpg" alt="">
                 <h6>Plomería</h6>
                 <p>Todo lo relacionado con tubería, en la cocina, en el baño, o cualquier tipo de goteras</p>
