tile-installer actualizacion

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h2 class="logo">tile installer</h2>
+        <h2 class="logo">MAESTRO</h2>
         <input type="checkbox" id="check">
         <label for="check" class="mostrar-menu">&#8801</label>
     
@@ -24,7 +24,7 @@
     </header>
     <section id="banner">
         <div class="contenido-banner">
-            <h3><span>TU ENCHAPADOR</span> DE CONFIANZA <br> A SOLO UN CLICK DE DISTANCIA </h3>
+            <h3><span>TU DISEÑADOR DE ACABADOS</span> DE CONFIANZA <br> A SOLO UN CLICK DE DISTANCIA </h3>
             <a href="#" class="boton-empezar">COTIZAR</a>
         </div>
     </section>
