--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section id="personas">
         <div>
-            <img class="instalador" src="./img/instalador.jpg" alt="persona">
+            <img class="instalador" src="./img/instalador2.png" alt="persona">
             <h4>Wilson Niño Salazar</h4>
             <p>Soy un apasionado de la construcción y desde muy joven me ha gustado este mundo de convertir espacios simples en obras modernas a través de las baldozas y de la personalidad de mis clientes. En el pasado fui parte del equipo de enchapadores de Corona por 20 años y actualmente soy un trabajador independiente.</p>
             <a href="#" class="boton-saber-mas">Saber más</a>
@@ -41,17 +41,27 @@
     <section id="iconos">
         <div class="contenido-iconos">
             <div>
-                <img src="./img/baldosas.jpg" alt="baldosas">
+                <img src="./img/cocina.avif" alt="baldosas">
                 <h6>Instalación de baldosas</h6>
                 <p>Esta es mi pasión. Transformar espacios aburridos en lugares modernos y con estilo.</p>
             </div>
             <div>
-                <img src="./img/sanitario.jpg" alt="sanitario">
+                <img src="./img/orden.avif" alt="sanitario">
+                <h6>Arregla tu baño</h6>
+                <p>¿Deseas modernizar tu baño? contáctame soy el indicado para ese trabajo</p>
+            </div>
+            <div>
+                <img src="./img/pintura.avif" alt="baldosas">
+                <h6>Instalación de baldosas</h6>
+                <p>Esta es mi pasión. Transformar espacios aburridos en lugares modernos y con estilo.</p>
+            </div>
+            <div>
+                <img src="./img/baño.avif" alt="sanitario">
                 <h6>Arregla tu baño</h6>
                 <p>¿Deseas modernizar tu baño? contáctame soy el indicado para ese trabajo</p>
             </div>
             <div id="plomeria">
-                <img src="./img/plomeria.jpg" alt="">
+                <img src="./img/orden2.avif" alt="">
                 <h6>Plomería</h6>
                 <p>Todo lo relacionado con tubería, en la cocina, en el baño, o cualquier tipo de goteras</p>
             </div>
