tile-installer secciones

--- a/index.html
+++ b/index.html
@@ -40,30 +40,35 @@
 
     <section id="iconos">
         <div class="contenido-iconos">
-            <div>
-                <img src="./img/cocina.avif" alt="baldosas">
+            <div class="uno">
+                <img src="./img/orden2.avif" alt="baldosas">
                 <h6>Instalación de baldosas</h6>
-                <p>Esta es mi pasión. Transformar espacios aburridos en lugares modernos y con estilo.</p>
+                <p>Las baldosas proveen el aspecto principal en el espacio en el que habitas. A través de ellas transmitimos las emociones que refleja nuestro hogar. Escríbeme ahora para encontrar las adecuadas para el tuyo.</p>
             </div>
-            <div>
-                <img src="./img/orden.avif" alt="sanitario">
-                <h6>Arregla tu baño</h6>
-                <p>¿Deseas modernizar tu baño? contáctame soy el indicado para ese trabajo</p>
+            <div class="dos">
+                <img src="./img/pintura.avif" alt="sanitario">
+                <h6>Pintura</h6>
+                <p>La pintura es el aspecto segundario y no menos importante al momento de transmitir un concepto dentro de tu hogar. Tú eliges el color y yo me encargo de hacerlo realidad.</p>
             </div>
-            <div>
-                <img src="./img/pintura.avif" alt="baldosas">
-                <h6>Instalación de baldosas</h6>
-                <p>Esta es mi pasión. Transformar espacios aburridos en lugares modernos y con estilo.</p>
-            </div>
-            <div>
-                <img src="./img/baño.avif" alt="sanitario">
-                <h6>Arregla tu baño</h6>
-                <p>¿Deseas modernizar tu baño? contáctame soy el indicado para ese trabajo</p>
-            </div>
-            <div id="plomeria">
-                <img src="./img/orden2.avif" alt="">
+            <div class="tres">
+                <img src="./img/plomeria.avif" alt="baldosas">
                 <h6>Plomería</h6>
-                <p>Todo lo relacionado con tubería, en la cocina, en el baño, o cualquier tipo de goteras</p>
+                <p>Tengo una frase que dice "Tuberías funcionando, serenidad incrementando. Tuberías averiadas, serenidad alterada". Este es el sistema circulatorio de nuestro hogar y más vale que funcione nadie quiere que nuestra casa sufra un paro cardiaco. Si tienes problemas con ello contáctame ahora mismo</p>
+            </div>
+            <div class="cuatro">
+                <img src="./img/baño.avif" alt="sanitario">
+                <h6>Acabados en el baño</h6>
+                <p>¿Deseas modernizar tu baño? El baño es el lugar donde nos organizamos nuestra belleza, seguro que también debe ser un espacio que refleje la belleza de nuestro hogar. Contáctame ya mismo para decirte cómo embellecerlo.</p>
+            </div>
+            <div id="cinco">
+                <img src="./img/orden.avif" alt="">
+                <h6>Acabados</h6>
+                <p>La belleza tiene muchas formas, encontremos la adecuada para expresar tus emociones dentro de tu hogar. Tranquilidad, paz, organización, enfoque. Dime cuál quieres y empecemos por el espacio de tu casa favorito.</p>
+            </div>
+            <div id="seis">
+                <img src="./img/cocina.avif" alt="">
+                <h6>Acabados de cocina</h6>
+                <p>¿Cansado de tener una cocina aburrida? A través de las baldosas puedes darle un estilo moderno, contáctame ya mismo para empezar a trabajar en mejorar el diseño de tu cocina</p>
             </div>
         </div>
         <div class="boton-iconos">
