--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div>
             <img class="instalador" src="./img/instalador2.png" alt="persona">
             <h4>Wilson Niño Salazar</h4>
-            <p>Soy un apasionado de la construcción y desde muy joven me ha gustado este mundo de convertir espacios simples en obras modernas a través de las baldozas y de la personalidad de mis clientes. En el pasado fui parte del equipo de enchapadores de Corona por 20 años y actualmente soy un trabajador independiente.</p>
+            <p>Soy un apasionado de la construcción y desde muy joven me ha gustado este mundo de convertir espacios simples en obras modernas a través de los detalles que aportan la pintura, las baldozas y la personalidad de mis clientes...</p>
             <a href="#" class="boton-saber-mas">Saber más</a>
         </div>
     </section>
@@ -75,5 +75,31 @@
             <a href="#" class="boton-saber-mas">Saber más</a>
         </div>
     </section>
+    <section id="contacto">
+        <h4>Contacta con nosotros</h4>
+        <form action="#">
+            <div class="datos-form">
+                <div class="nombre">
+                    <label for="nombre">Nombre</label>
+                    <input type="text" name="nombre" id="nombre" placeholder="Nombre">
+                </div>
+                <div class="email">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" placeholder="Email">
+                </div>
+            </div>
+            <div class="mensaje">
+                <label for="mensaje">Mensaje</label>
+                <textarea name="mensaje" id="mensaje" cols="30" rows="10" placeholder="mensaje"></textarea>
+            </div>
+            <div class="boton-formulario">
+                <a href="#" class="boton-saber-mas">Enviar mensaje</a>
+            </div>
+        </form>
+    </section>
+
+    <footer>
+        <p>&copy2023 Maestro</p>
+    </footer>
 </body>
 </html>
