--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div>
             <img class="instalador" src="./img/instalador2.png" alt="persona">
             <h4>Wilson Niño Salazar</h4>
-            <p>Soy un apasionado de la construcción y desde muy joven me ha gustado este mundo de convertir espacios simples en obras modernas a través de los detalles que aportan la pintura, las baldozas y la personalidad de mis clientes...</p>
+            <p>Soy un apasionado de la construcción y me encanta convertir espacios simples en obras modernas a través de la pintura, las baldozas y la personalidad de mis clientes...</p>
             <a href="#" class="boton-saber-mas">Saber más</a>
         </div>
     </section>
@@ -90,7 +90,7 @@
             </div>
             <div class="mensaje">
                 <label for="mensaje">Mensaje</label>
-                <textarea name="mensaje" id="mensaje" cols="30" rows="10" placeholder="mensaje"></textarea>
+                <textarea name="mensaje" id="mensaje" cols="30" rows="10" placeholder="Escribe aquí el tipo de trabajo que desees yo haga en tu hogar. Y agrega la mayor cantidad de detalles posible"></textarea>
             </div>
             <div class="boton-formulario">
                 <a href="#" class="boton-saber-mas">Enviar mensaje</a>
