--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maestro</title>
+    <title>Sobre mí</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,8 +24,8 @@
     </header>
     <section id="banner">
         <div class="contenido-banner">
-            <h3><span>TU DISEÑADOR DE ACABADOS</span> DE CONFIANZA <br> A SOLO UN CLICK DE DISTANCIA </h3>
-            <a href="#" class="boton-empezar">COTIZAR</a>
+            <h3><span>VOY A CONTARTE SOBRE MÍ</span></h3>
+            <a href="#" class="boton-empezar">CONTACTAR</a>
         </div>
     </section>
 
@@ -76,7 +76,7 @@
         </div>
     </section>
     <section id="contacto">
-        <h4>Contacta conmigo</h4>
+        <h4>Contacta con nosotros</h4>
         <form action="#">
             <div class="datos-form">
                 <div class="nombre">
