--- a/about.html
+++ b/about.html
@@ -15,68 +15,67 @@
         <nav class="menu">
             <a href="./index.html">Inicio</a>
             <a href="./about.html">Sobre mí</a>
-            <a href="#">Mis trabajos</a>
-            <a href="#">Contácto</a>
+            <a href="./trabajos.html">Mis trabajos</a>
+            <a href="./testimonios.html">Testimonios</a>
+            <a href="./formulario.html">Contácto</a>
             <label for="check" class="esconder-menu">
                 &#215
             </label>
         </nav>
     </header>
-    <section id="banner">
+    <section >
         <div class="contenido-banner">
             <h3><span>VOY A CONTARTE SOBRE MÍ</span></h3>
-            <a href="#" class="boton-empezar">CONTACTAR</a>
         </div>
     </section>
 
-    <section id="personas">
+    <section id="personas2">
         <div>
             <img class="instalador" src="./img/instalador2.png" alt="persona">
             <h4>Wilson Niño Salazar</h4>
-            <p>Soy un apasionado de la construcción y me encanta convertir espacios simples en obras modernas a través de la pintura, las baldozas y la personalidad de mis clientes...</p>
-            <a href="#" class="boton-saber-mas">Saber más</a>
+            <p>Hola, vivo en Bucaramanga y trabajo como instalador de acabados. Amo mi trabajo porque es el que me ha permitido llevar el sustento a mi hogar y apoyar a la formación de mis hijos. </p>
+            <br>
+            <p>En el pasado, fui trabajador de Corona por 20 años y actualmente me desempeño como independiente. Tengo un amplio conocimiento sobre la moda y los diferentes estilos que puedes adaptar para tu hogar. A continuación te comparto algunas de mis cualidades y las habilidades que me representan.</p>
         </div>
     </section>
 
-    <section id="iconos">
+    <section id="iconos2">
         <div class="contenido-iconos">
             <div class="uno">
-                <img src="./img/orden2.avif" alt="baldosas">
-                <h6>Instalación de baldosas</h6>
-                <p>Las baldosas proveen el aspecto principal en el espacio en el que habitas. A través de ellas transmitimos las emociones que refleja nuestro hogar. Escríbeme ahora para encontrar las adecuadas para el tuyo.</p>
+                <img src="./img/eficiente.png" alt="eficiente">
+                <h6>Eficiente</h6>
+                <p>Trabajo de forma rápida y con calidad, para ahorrar el tiempo de mis clientes y que reciban el trabajo en el tiempo estimado.</p>
             </div>
             <div class="dos">
-                <img src="./img/pintura.avif" alt="sanitario">
-                <h6>Pintura</h6>
-                <p>La pintura es el aspecto segundario y no menos importante al momento de transmitir un concepto dentro de tu hogar. Tú eliges el color y yo me encargo de hacerlo realidad.</p>
+                <img src="./img/creativo.png" alt="creativo">
+                <h6>Creativo</h6>
+                <p>Me gusta proponer buenas ideas que vayan acorde a las necesidades del trabajo, sea pintura, plomería o diseño con baldosas.</p>
             </div>
             <div class="tres">
-                <img src="./img/plomeria.avif" alt="baldosas">
-                <h6>Plomería</h6>
-                <p>Tengo una frase que dice "Tuberías funcionando, serenidad incrementando. Tuberías averiadas, serenidad alterada". Este es el sistema circulatorio de nuestro hogar y más vale que funcione nadie quiere que nuestra casa sufra un paro cardiaco. Si tienes problemas con ello contáctame ahora mismo</p>
+                <img src="./img/trabajo.png" alt="baldosas">
+                <h6>Trabajo arduo</h6>
+                <p>Trabajo constante hasta finalizar tu objetivo, sin pausas.</p>
             </div>
             <div class="cuatro">
-                <img src="./img/baño.avif" alt="sanitario">
-                <h6>Acabados en el baño</h6>
-                <p>¿Deseas modernizar tu baño? El baño es el lugar donde nos organizamos nuestra belleza, seguro que también debe ser un espacio que refleje la belleza de nuestro hogar. Contáctame ya mismo para decirte cómo embellecerlo.</p>
+                <img src="./img/garantia.png" alt="sanitario">
+                <h6>Garantía</h6>
+                <p>Siempre doy un acompañamiento antes durante y después del trabajo para garantizar que mis clientes queden completamente satisfechos.</p>
             </div>
             <div id="cinco">
-                <img src="./img/orden.avif" alt="">
-                <h6>Acabados</h6>
-                <p>La belleza tiene muchas formas, encontremos la adecuada para expresar tus emociones dentro de tu hogar. Tranquilidad, paz, organización, enfoque. Dime cuál quieres y empecemos por el espacio de tu casa favorito.</p>
+                <img src="./img/diseño.png" alt="diseño">
+                <h6>Diferentes estilos</h6>
+                <p>Gracias a mi experiencia y creatividad puedo proponerte varias propuestas para plasmar en tu hogar un estilo novedoso acorde a tus gustos.</p>
             </div>
             <div id="seis">
-                <img src="./img/cocina.avif" alt="">
-                <h6>Acabados de cocina</h6>
-                <p>¿Cansado de tener una cocina aburrida? A través de las baldosas puedes darle un estilo moderno, contáctame ya mismo para empezar a trabajar en mejorar el diseño de tu cocina</p>
+                <img src="./img/experiencia.png" alt="experiencia">
+                <h6>Experiencia</h6>
+                <p>Soy un trabajador experimentado y cuento con las herramientas adecuadas para desarrollar mi trabajo.</p>
             </div>
         </div>
-        <div class="boton-iconos">
-            <a href="#" class="boton-saber-mas">Saber más</a>
-        </div>
+
     </section>
     <section id="contacto">
-        <h4>Contacta con nosotros</h4>
+        <h4>Contacta conmigo</h4>
         <form action="#">
             <div class="datos-form">
                 <div class="nombre">
