--- a/testimonios.html
+++ b/testimonios.html
@@ -23,19 +23,9 @@
             </label>
         </nav>
     </header>
-    <section id="banner">
+    <section >
         <div class="contenido-banner">
-            <h3><span>TU INSTALADOR DE ACABADOS</span> DE CONFIANZA <br> A SOLO UN CLICK DE DISTANCIA </h3>
-            <a href="#" class="boton-empezar">COTIZAR</a>
-        </div>
-    </section>
-
-    <section id="personas">
-        <div>
-            <img class="instalador" src="./img/instalador2.png" alt="persona">
-            <h4>Wilson Niño Salazar</h4>
-            <p>Soy un apasionado de la construcción y me encanta convertir espacios simples en obras modernas a través de la pintura, las baldozas y la personalidad de mis clientes...</p>
-            <a href="./about.html" class="boton-saber-mas">Saber más</a>
+            <h3><span>TESTIMONIOS</span></h3>
         </div>
     </section>
 
@@ -43,8 +33,8 @@
         <div class="contenido-iconos">
             <div class="uno">
                 <img src="./img/orden2.avif" alt="baldosas">
-                <h6>Instalación de baldosas</h6>
-                <p>Las baldosas proveen el aspecto principal en el espacio en el que habitas. A través de ellas transmitimos las emociones que refleja nuestro hogar. Escríbeme ahora para encontrar las adecuadas para el tuyo.</p>
+                <h6>Marcos Vargas</h6>
+                <p>"Ha hecho un trabajo muy profesional, con el cambio de todas las baldosas de mi casa, incluyendo las de los baños y las de la cocina. Lo recomiendo por su arduo trabajo".</p>
             </div>
             <div class="dos">
                 <img src="./img/pintura.avif" alt="sanitario">
@@ -72,9 +62,7 @@
                 <p>¿Cansado de tener una cocina aburrida? A través de las baldosas puedes darle un estilo moderno, contáctame ya mismo para empezar a trabajar en mejorar el diseño de tu cocina</p>
             </div>
         </div>
-        <div class="boton-iconos">
-            <a href="#" class="boton-saber-mas">Saber más</a>
-        </div>
+        
     </section>
     <section id="contacto">
         <h4>Contacta conmigo</h4>
