--- a/trabajos.html
+++ b/trabajos.html
@@ -23,19 +23,9 @@
             </label>
         </nav>
     </header>
-    <section id="banner">
+    <section >
         <div class="contenido-banner">
-            <h3><span>TU INSTALADOR DE ACABADOS</span> DE CONFIANZA <br> A SOLO UN CLICK DE DISTANCIA </h3>
-            <a href="#" class="boton-empezar">COTIZAR</a>
-        </div>
-    </section>
-
-    <section id="personas">
-        <div>
-            <img class="instalador" src="./img/instalador2.png" alt="persona">
-            <h4>Wilson Niño Salazar</h4>
-            <p>Soy un apasionado de la construcción y me encanta convertir espacios simples en obras modernas a través de la pintura, las baldozas y la personalidad de mis clientes...</p>
-            <a href="./about.html" class="boton-saber-mas">Saber más</a>
+            <h3><span>ESTOS SON LOS TRABAJOS QUE HAGO</span></h3>
         </div>
     </section>
 
@@ -72,9 +62,7 @@
                 <p>¿Cansado de tener una cocina aburrida? A través de las baldosas puedes darle un estilo moderno, contáctame ya mismo para empezar a trabajar en mejorar el diseño de tu cocina</p>
             </div>
         </div>
-        <div class="boton-iconos">
-            <a href="#" class="boton-saber-mas">Saber más</a>
-        </div>
+        
     </section>
     <section id="contacto">
         <h4>Contacta conmigo</h4>
