--- a/testimonios.html
+++ b/testimonios.html
@@ -32,34 +32,39 @@
     <section id="iconos">
         <div class="contenido-iconos">
             <div class="uno">
-                <img src="./img/orden2.avif" alt="baldosas">
+                <img src="./img/persona.png" alt="baldosas">
                 <h6>Marcos Vargas</h6>
                 <p>"Ha hecho un trabajo muy profesional, con el cambio de todas las baldosas de mi casa, incluyendo las de los baños y las de la cocina. Lo recomiendo por su arduo trabajo".</p>
             </div>
             <div class="dos">
-                <img src="./img/pintura.avif" alt="sanitario">
-                <h6>Pintura</h6>
-                <p>La pintura es el aspecto segundario y no menos importante al momento de transmitir un concepto dentro de tu hogar. Tú eliges el color y yo me encargo de hacerlo realidad.</p>
+                <img src="./img/persona.png" alt="baldosas">
+                <h6>Marcos Vargas</h6>
+                <p>"Ha hecho un trabajo muy profesional, con el cambio de todas las baldosas de mi casa, incluyendo las de los baños y las de la cocina. Lo recomiendo por su arduo trabajo".</p>
             </div>
             <div class="tres">
-                <img src="./img/plomeria.avif" alt="baldosas">
-                <h6>Plomería</h6>
-                <p>Tengo una frase que dice "Tuberías funcionando, serenidad incrementando. Tuberías averiadas, serenidad alterada". Este es el sistema circulatorio de nuestro hogar y más vale que funcione nadie quiere que nuestra casa sufra un paro cardiaco. Si tienes problemas con ello contáctame ahora mismo</p>
+                <img src="./img/persona.png" alt="baldosas">
+                <h6>Marcos Vargas</h6>
+                <p>"Ha hecho un trabajo muy profesional, con el cambio de todas las baldosas de mi casa, incluyendo las de los baños y las de la cocina. Lo recomiendo por su arduo trabajo".</p>
             </div>
             <div class="cuatro">
-                <img src="./img/baño.avif" alt="sanitario">
-                <h6>Acabados en el baño</h6>
-                <p>¿Deseas modernizar tu baño? El baño es el lugar donde nos organizamos nuestra belleza, seguro que también debe ser un espacio que refleje la belleza de nuestro hogar. Contáctame ya mismo para decirte cómo embellecerlo.</p>
+                <img src="./img/persona.png" alt="baldosas">
+                <h6>Marcos Vargas</h6>
+                <p>"Ha hecho un trabajo muy profesional, con el cambio de todas las baldosas de mi casa, incluyendo las de los baños y las de la cocina. Lo recomiendo por su arduo trabajo".</p>
             </div>
-            <div id="cinco">
-                <img src="./img/orden.avif" alt="">
-                <h6>Acabados</h6>
-                <p>La belleza tiene muchas formas, encontremos la adecuada para expresar tus emociones dentro de tu hogar. Tranquilidad, paz, organización, enfoque. Dime cuál quieres y empecemos por el espacio de tu casa favorito.</p>
+            <div class="cinco">
+                <img src="./img/persona.png" alt="baldosas">
+                <h6>Marcos Vargas</h6>
+                <p>"Ha hecho un trabajo muy profesional, con el cambio de todas las baldosas de mi casa, incluyendo las de los baños y las de la cocina. Lo recomiendo por su arduo trabajo".</p>
             </div>
-            <div id="seis">
-                <img src="./img/cocina.avif" alt="">
-                <h6>Acabados de cocina</h6>
-                <p>¿Cansado de tener una cocina aburrida? A través de las baldosas puedes darle un estilo moderno, contáctame ya mismo para empezar a trabajar en mejorar el diseño de tu cocina</p>
+            <div class="seis">
+                <img src="./img/persona.png" alt="baldosas">
+                <h6>Marcos Vargas</h6>
+                <p>"Ha hecho un trabajo muy profesional, con el cambio de todas las baldosas de mi casa, incluyendo las de los baños y las de la cocina. Lo recomiendo por su arduo trabajo".</p>
+            </div>
+            <div class="cuatro">
+                <img src="./img/persona.png" alt="baldosas">
+                <h6>Marcos Vargas</h6>
+                <p>"Ha hecho un trabajo muy profesional, con el cambio de todas las baldosas de mi casa, incluyendo las de los baños y las de la cocina. Lo recomiendo por su arduo trabajo".</p>
             </div>
         </div>
         
