--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     </header>
     <section >
         <div class="contenido-banner">
-            <h3><span>VOY A CONTARTE SOBRE MÍ</span></h3>
+            <h3><span>ACERCA DE MÍ</span></h3>
         </div>
     </section>
 
@@ -40,6 +40,9 @@
     </section>
 
     <section id="iconos2">
+        <br>
+        <br>
+        <h1>MIS HABILIDADES</h1>
         <div class="contenido-iconos">
             <div class="uno">
                 <img src="./img/eficiente.png" alt="eficiente">
