--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </section>
 
     <footer>
-        <p>&copy2023 Maestro</p>
+        <p>&copy2023 MAESTRO - Todos los derechos reservados</p>
     </footer>
 </body>
 </html>
