--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <form action="https://www.google.com/search" method="get">
+        <fieldset>
+            <legend>Busqueda</legend>
+                <!-- Input Busqueda-->
+                <label for="busqueda">Buscar en google:</label>
+                <br>
+                <input type="search" name="q" id="busqueda">
+                <br>
+                <input type="submit" value="Enviar">
+        </fieldset>
+      </form>
     <header>
         <h2 class="logo">MAESTRO</h2>
         <input type="checkbox" id="check">
