--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form action="https://www.google.com/search" method="get">
+    <form class="buscar" action="https://www.google.com/search" method="get">
         <fieldset>
             <legend>Busqueda</legend>
                 <!-- Input Busqueda-->
@@ -18,6 +18,7 @@
                 <input type="submit" value="Enviar">
         </fieldset>
       </form>
+   
     <header>
         <h2 class="logo">MAESTRO</h2>
         <input type="checkbox" id="check">
