actualizacion botón busqueda

--- a/index.html
+++ b/index.html
@@ -8,16 +8,9 @@
 </head>
 <body>
     <form class="buscar" action="https://www.google.com/search" method="get">
-        <fieldset>
-            <legend>Busqueda</legend>
-                <!-- Input Busqueda-->
-                <label for="busqueda">Buscar en google:</label>
-                <br>
-                <input type="search" name="q" id="busqueda">
-                <br>
-                <input type="submit" value="Enviar">
-        </fieldset>
-      </form>
+        <!-- Input Busqueda-->
+        <div></div><input class="caja" type="search" name="q" id="busqueda" placeholder="Buscar"><input class="lupa" type="submit" value="Enviar">
+    </form>
    
     <header>
         <h2 class="logo">MAESTRO</h2>
