--- a/formulario.html
+++ b/formulario.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <form class="buscar" action="https://www.google.com/search" method="get">
+        <!-- Input Busqueda-->
+        <div></div><input class="caja" type="search" name="q" id="busqueda" placeholder="Buscar"><input class="lupa" type="submit" value="Enviar">
+    </form>
+    
     <header>
         <h2 class="logo">MAESTRO</h2>
         <input type="checkbox" id="check">
