--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             <a href="./trabajos.html">Mis trabajos</a>
             <a href="./testimonios.html">Testimonios</a>
             <a href="./formulario.html">Contácto</a>
+            <form class="buscar" action="https://www.google.com/search" method="get">
+                <!-- Input Busqueda-->
+                <div></div><input class="caja" type="search" name="q" id="busqueda" placeholder="Buscar"><input class="lupa" type="submit" value="Enviar">
+            </form>
             <label for="check" class="esconder-menu">
                 &#215
             </label>
