--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form class="buscar" action="https://www.google.com/search" method="get">
-        <!-- Input Busqueda-->
-        <div></div><input class="caja" type="search" name="q" id="busqueda" placeholder="Buscar"><input class="lupa" type="submit" value="Enviar">
-    </form>
    
     <header>
         <h2 class="logo">MAESTRO</h2>
@@ -25,7 +21,7 @@
             <a href="./formulario.html">Contácto</a>
             <form class="buscar" action="https://www.google.com/search" method="get">
                 <!-- Input Busqueda-->
-                <div></div><input class="caja" type="search" name="q" id="busqueda" placeholder="Buscar"><input class="lupa" type="submit" value="Enviar">
+                <input class="caja" type="search" name="q" id="busqueda" placeholder="Buscar"><input class="lupa" type="submit" value="Enviar">
             </form>
             <label for="check" class="esconder-menu">
                 &#215
