--- a/about.html
+++ b/about.html
@@ -8,11 +8,6 @@
 </head>
 <body>
 
-    <form class="buscar" action="https://www.google.com/search" method="get">
-        <!-- Input Busqueda-->
-        <div></div><input class="caja" type="search" name="q" id="busqueda" placeholder="Buscar"><input class="lupa" type="submit" value="Enviar">
-    </form>
-
     <header>
         <h2 class="logo">MAESTRO</h2>
         <input type="checkbox" id="check">
@@ -24,6 +19,10 @@
             <a href="./trabajos.html">Mis trabajos</a>
             <a href="./testimonios.html">Testimonios</a>
             <a href="./formulario.html">Contácto</a>
+            <form class="buscar" action="https://www.google.com/search" method="get">
+                <!-- Input Busqueda-->
+                <input class="caja" type="search" name="q" id="busqueda" placeholder="Buscar"><input class="lupa" type="submit" value="Enviar">
+            </form>
             <label for="check" class="esconder-menu">
                 &#215
             </label>
