--- a/testimonios.html
+++ b/testimonios.html
@@ -37,13 +37,13 @@
     <section id="iconos">
         <div class="contenido-iconos">
             <div class="uno">
-                <img src="./img/persona.png" alt="baldosas">
-                <h6>Marcos Vargas</h6>
+                <img src="./img/alexandra.webp" alt="baldosas">
+                <h6>Alexandra Vargas</h6>
                 <p>"Ha hecho un trabajo muy profesional, con el cambio de todas las baldosas de mi casa, incluyendo las de los baños y las de la cocina. Lo recomiendo por su arduo trabajo".</p>
             </div>
             <div class="dos">
-                <img src="./img/persona.png" alt="baldosas">
-                <h6>Marcos Vargas</h6>
+                <img src="./img/mujer.webp" alt="baldosas">
+                <h6>Dayana García</h6>
                 <p>"Ha hecho un trabajo muy profesional, con el cambio de todas las baldosas de mi casa, incluyendo las de los baños y las de la cocina. Lo recomiendo por su arduo trabajo".</p>
             </div>
             <div class="tres">
@@ -62,7 +62,7 @@
                 <p>"Ha hecho un trabajo muy profesional, con el cambio de todas las baldosas de mi casa, incluyendo las de los baños y las de la cocina. Lo recomiendo por su arduo trabajo".</p>
             </div>
             <div class="seis">
-                <img src="./img/persona.png" alt="baldosas">
+                <img src="./img/mujer.webp" alt="baldosas">
                 <h6>Marcos Vargas</h6>
                 <p>"Ha hecho un trabajo muy profesional, con el cambio de todas las baldosas de mi casa, incluyendo las de los baños y las de la cocina. Lo recomiendo por su arduo trabajo".</p>
             </div>
@@ -98,7 +98,7 @@
     </section>
 
     <footer>
-        <p>&copy2023 Maestro</p>
+        <p>&copy2024 Maestro</p>
     </footer>
 </body>
 </html>
