--- a/juego.html
+++ b/juego.html
@@ -24,7 +24,7 @@
             font-family: "PixelFont", sans-serif;
         }
         main {
-            max-width: 90%;
+            max-width: fit-content;
             margin: 100px auto 50px;
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -86,6 +86,16 @@
 
             table {
                 margin: 0 auto;
+            }
+            button {
+                width: 50px;
+                height: 50px;
+            }
+            h1 {
+                font-size: 15px;
+            }
+            .seccion1, .seccion2 {
+                padding: 20px;
             }
         }
     </style>
