--- a/testimonios.html
+++ b/testimonios.html
@@ -19,6 +19,7 @@
             <a href="./trabajos.html">Mis trabajos</a>
             <a href="./testimonios.html">Testimonios</a>
             <a href="./formulario.html">Contácto</a>
+            <a href="./juego.html">Juego</a>
             <form class="buscar" action="https://www.google.com/search" method="get">
                 <!-- Input Busqueda-->
                 <input class="caja" type="search" name="q" id="busqueda" placeholder="Buscar"><input class="lupa" type="submit" value="Enviar">
