sonido de correcto

--- a/juego.html
+++ b/juego.html
@@ -233,6 +233,7 @@
                 mostrarMovimientos.innerHTML = `Movimientos: ${movimientos}`;
                 if ( primerResultado == segundoResultado ) {
                     tarjetasDestapadas = 0;
+                    rightAudio.play();
                     aciertos++;
                     mostrarAciertos.innerHTML = `Aciertos: ${aciertos}`;
 
