--- a/juego.html
+++ b/juego.html
@@ -203,7 +203,7 @@
         function bloquearTarjetas() {
             for (let i = 0; i <= 15; i++) {
                 let tarjetaBloqueada = document.getElementById(i)
-                tarjetaBloqueada.innerHTML = `<img src="./img/img/${numeros[i]}.png" alt="img${numeros[i]}">`;
+                tarjetaBloqueada.innerHTML = `<img src="./img/img/b${numeros[i]}.png" alt="img${numeros[i]}">`;
                 tarjetaBloqueada.disabled = true;
             }
         }
@@ -219,14 +219,14 @@
             if(tarjetasDestapadas == 1) {
                 tarjeta1 = document.getElementById(id);
                 primerResultado = numeros[id];
-                tarjeta1.innerHTML = `<img src="./img/img/${primerResultado}.png">`;
+                tarjeta1.innerHTML = `<img src="./img/img/b${primerResultado}.png">`;
                 clickAudio.play();
                 tarjeta1.disabled = true;
 
             } else if (tarjetasDestapadas == 2) {
                 tarjeta2 = document.getElementById(id);
                 segundoResultado = numeros[id];
-                tarjeta2.innerHTML = `<img src="./img/img/${segundoResultado}.png">`;
+                tarjeta2.innerHTML = `<img src="./img/img/b${segundoResultado}.png">`;
                 clickAudio.play()
                 tarjeta2.disabled = true;
                 movimientos++;
