--- a/juego.html
+++ b/juego.html
@@ -125,7 +125,7 @@
     <main>
         <section class="seccion1">
             <h1>Encuentra todos los pares de baldosas</h1>
-            <table>
+            <table id="juego">
                 <tr>
                     <td><button id="0" onclick="destapar(0)"></button></td>
                     <td><button id="1" onclick="destapar(1)"></button></td>
