--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Iniciar sesión</title>
   <link rel="stylesheet" href="style-login-register.css">
-  <script src="./public/login.js" defer></script>
+  <script src="./views/login.js" type="module" defer></script>
 </head>
 <body>
   <main>
@@ -17,7 +17,7 @@
         <input type="text" name="user" id="user" placeholder="Usuario">
         <label for="password" class="sr-only">Password</label>
         <input type="password" name="password" id="password" placeholder="Contraseña">
-        <button type="submit">Iniciar sesión</button>
+        <button type="submit" value="Ingresar">Iniciar sesión</button>
         <p class="error escondido">Error al iniciar sesión</p>
       </form>
       <p>¿Todavía no tienes una cuenta? - <a href="./register.html">Registrate</a></p>
