--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registro</title>
   <link rel="stylesheet" href="style-login-register.css">
-  <script src="./public/register.js" defer></script>
+  <script src="./views/login.js" type="module" defer></script>
 </head>
 <body>
   <main>
@@ -19,7 +19,7 @@
         <input type="email" name="email" id="email" placeholder="Email">
         <label for="password" class="sr-only">Password</label>
         <input type="password" name="password" id="password" placeholder="Contraseña">
-        <button type="submit">Registrarme</button>
+        <button type="submit" value="Registrar">Registrarme</button>
         <p class="error escondido">Error al registrarse</p>
       </form>
       <p>¿Ya estás registrado? - <a href="./login.html">Ingresa</a></p>
